--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,9 +3,9 @@
 
 @import "{{ site.theme }}";
 #banner{
-  background:#66ccff;
+  background:"#66ccff";
   border:1px solid #77ddff;
 }
 header{
-  background:#66ccff;
+  background:"#66ccff";
 }
