--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,7 @@
 
 @import "{{ site.theme }}";
 #banner{
-  background:"#66ccff";
-  border:1px solid #77ddff;
+  display:none;
 }
 header{
   background:"#66ccff";
